# robotics-spring2023

./: README.md
Assignments/Assignment_0/: README.md
Assignments/Assignment_1/: README.md
Assignments/Assignment_1/alicesim/: package.xml
Assignments/Assignment_1/bobsim/: CMakeLists.txt
Assignments/Assignment_2/: README.md
Assignments/Assignment_2/yangsim/: CMakeLists.txt
Assignments/Assignment_2/yinsim/: package.xml  setup.py
Assignments/Assignment_2/yinyang_msgs/: CMakeLists.txt  package.xml
Assignments/Assignment_3/: README.md  alice_bob.yaml  yin_yang.yaml
Assignments/Assignment_3/turtlemania/: setup.py
Assignments/Assignment_5/: README.md
Assignments/Assignment_5/eddiebot_navigation/: package.xml  setup.cfg  setup.py
Assignments/Assignment_6/: README.md
Assignments/eddiebot_navigation/: setup.py
Assignments/eddiebot_navigation/launch/: eddiebot_odom.launch.py
Assignments/eddiebot_navigation/rviz/: model.rviz
Eddie/: README.md  SUMMARY.md
Eddie/eddie-setup-and-bringup/: bringup.md  control-board-firmware-command-set.md  hardware-subsystems.md  networking.md  setting-up-the-kinect.md  software-subsystems.md
Eddie/latex/: 1-final-setup.tex  2-odometry.tex  3-slam-&-navigation.tex  main.tex
Eddie/latex/code/: eddie_controller.cpp  eddie_odom.cpp
Eddie/odometry/: motor-control.md  wheel-odometry-model.md
Eddie/slam-and-navigation/: 2d-slam.md  nav2.md  vslam.md
HW#01/alicesim/: setup.py
HW#01/alicesim/alicesim/: alicenode.py
HW#01/bobsim/: package.xml
HW#01/bobsim/src/: bobnode.cpp
HW#01/subset_f/: metadata.yaml  subset_f_0.db3
HW#02/yangsim/: package.xml
HW#02/yangsim/src/: yangnode.cpp
HW#02/yinsim/yinsim/: yinnode.py
HW#03/turtlemania/: package.xml
HW#03/turtlemania/launch/: turtlemania_tf2_demo.launch.py
Lab#05/ws3/: CMakeLists.txt
Lab#05/ws3/config/: initial_positions.yaml  joint_limits.yaml  model.ros2_control.xacro  model.srdf  model.urdf.xacro
Lab#05/ws3/launch/: gz2_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
Lab#05/ws3/ws3/: node.cpp
Lab#08/diff_drive/: setup.py
Lab#08/diff_drive/diff_drive/: diff_drive.py
Labs/Lab_0/: README.md
Labs/Lab_10/: Lab_10.md
Labs/Lab_11/: README.md
Labs/Lab_2/: README.md
Labs/Lab_2/turtlesim_controller/: CMakeLists.txt  package.xml
Labs/Lab_2/turtlesim_controller/src/: turtlesim_controller.cpp
Labs/Lab_7/: README.md
Labs/Lab_8/: README.md
Labs/Lab_9/: README.md  exec3.webm
Labs/diff_drive/: package.xml
Project/Project_Phase_1/: 1-Section.tex  2-Section.tex  3-Section.tex  main.tex  sample.bib
(+31 files in other folders)
